[package]
name = "eda-game-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.rayon]
version = "1.6"

[dependencies.regex]
version = "1.7"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.indicatif]
version = "0.17"
features = ["rayon"]

[dependencies.color-eyre]
version = "0.6"

[dependencies.itertools]
version = "0.10"

[dependencies.thiserror]
version = "1.0"